# laya-atlas-generator

./: .gitignore  AtlasPacker.cc  AtlasPacker.h  CMakeLists.txt  CONTRIBUTING.md  Configuration.cc  Configuration.h  DataExport.h  JsonExport.cpp  JsonExport.h  Utils.cc  Utils.h  atlas-generator.pro  atlasConfig  atlas_packer.cc  atlas_packer.h  cli_args.cc  cli_args.h  json_export.cpp  json_export.h  main.cc  main.cpp  utils.cc  utils.h
CRC32/: CRC32.cpp
RectangleBinPack/: GuillotineBinPack.cpp  GuillotineBinPack.h  MaxRectsBinPack.cpp  ShelfBinPack.cpp  ShelfNextFitBinPack.cpp  SkylineBinPack.cpp
